--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^8.1.4
   go_router: ^13.2.0
+  pinput: ^4.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -21,4 +23,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/
