--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   go_router: ^13.2.0
   pinput: ^4.0.0
   intl: ^0.19.0
+  animated_theme_switcher: ^2.0.10
 
 dev_dependencies:
   flutter_lints: ^3.0.0
